# AbletonSurfaceController

./: .gitmodules  README.md
AbletonSurfaceController/: CMakeLists.txt
AbletonSurfaceController/include/: CMakeLists.txt
AbletonSurfaceController/include/Display/: CMakeLists.txt  displayTitles.h
AbletonSurfaceController/libs/: CMakeLists.txt
AbletonSurfaceController/src/: CMakeLists.txt
AbletonSurfaceController/src/Display/: CMakeLists.txt  displayTitles.c
AbletonSurfaceController/src/main/: CMakeLists.txt  main.c
AbletonSurfaceController/tests/: CMakeLists.txt  tests.c
tests/Comunication/FrameworkIntegration/: CMakeLists.txt  functions.c  functions.h  main.c  usb_descriptors.c
tests/Comunication/blink/: CMakeLists.txt  blink.c
tests/Comunication/blink/build1/: CMakeCache.txt  Makefile  MoodBlink.dis  MoodBlink.elf  MoodBlink.elf.map  MoodBlink.hex  MoodBlink.uf2  cmake_install.cmake
tests/Comunication/blink/build1/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/Comunication/blink/build1/elf2uf2/boot_uf2_headers/: Makefile
tests/Comunication/blink/build1/pico-sdk/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/docs/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/src/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/src/common/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/src/common/boot_uf2/: Makefile  (+1 more)
tests/Comunication/blink/build1/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
tests/Comunication/blink/build1/pico-sdk/tools/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/: CMakeCache.txt  Makefile  MoodBlink.dis  MoodBlink.elf  MoodBlink.elf.map  MoodBlink.hex  MoodBlink.uf2  cmake_install.cmake
tests/Comunication/blink/build2/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
tests/Comunication/blink/build2/elf2uf2/boot_uf2_headers/: Makefile
tests/Comunication/blink/build2/pico-sdk/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/pico-sdk/docs/: Makefile
tests/Comunication/blink/build2/pico-sdk/src/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/pico-sdk/src/common/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
tests/Comunication/blink/build2/pico-sdk/tools/: Makefile
tests/Comunication/midi1/: CMakeLists.txt  midi1.c
tests/Comunication/midi1/.depreciated/: example.c  midi1.c  midi1notw.c  tusb_configOLD.h  usb_descriptorsOLD.c
tests/Hardware/Display/Display/: CMakeLists.txt  main.cpp
tests/Hardware/Display/Display/Fonts/: CMakeLists.txt  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  (+12 more)
(+201 files in other folders)
